[package]
name = "cafezinho"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "cafezinho"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36"
dryoc = "0.7"

[features]


nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
